Fix rooms and channels overflow, adjust hover behaviour of room options, add gear icon for room options, adjust style of channel list

--- a/client/src/components/App.scss
+++ b/client/src/components/App.scss
@@ -23,6 +23,8 @@
   flex-direction: column;
   top: 0;
   bottom: 0;
+  overflow-y: auto;
+  overflow-x: hidden;
 
   &--rooms {
     width: $sidebar-width;
