--- a/client/src/components/Channel/ChannelListItem.scss
+++ b/client/src/components/Channel/ChannelListItem.scss
@@ -1,7 +1,7 @@
 @import "../../styles/variables.scss";
 
 .channel-title {
-  margin: 1rem;
+  // margin: 1rem;
   text-align: center;
 }
 
@@ -43,4 +43,21 @@
 .channel-item:hover {
   font-weight: 700;
   box-shadow: 0px 0px 0px none;
+}
+
+button.MuiButton-root {
+  width: 100%;
+  padding: 0 0 0 0;
+  color: grey;
+  font-weight: bold;
+  font-size: 1rem;
+  margin: 0.5rem;
+}
+button.MuiButton-root:hover {
+  background-color: inherit;
+  color: white;
+}
+
+.MuiSvgIcon-root {
+  color: inherit;
 }
