--- a/client/src/styles/index.scss
+++ b/client/src/styles/index.scss
@@ -13,6 +13,7 @@
 
 #root {
   height: 100vh;
+  max-height: 100vh;
   width: 100vw;
 }
 body {
@@ -21,6 +22,7 @@ body {
   color: white;
   height: 100vh;
   width: 100vw;
+  background-color: $dark-background;
 }
 
 .layout {
@@ -28,28 +30,28 @@ body {
   flex-direction: column;
   width: 100%;
   height: 100%;
+  max-height: 100%;
 }
 
 .main-container {
-  position: relative;
+  position: absolute;
   width: 100%;
-  // top: $sidebar;
-  // bottom: 0rem;
+  top: $sidebar-width;
+  bottom: 0;
   display: flex;
   justify-content: space-between;
   flex-direction: row;
-  height: 100%;
 }
 
 /* width */
 ::-webkit-scrollbar {
-  width: 10px;
+  width: 7px;
 }
 
 /* Track */
 ::-webkit-scrollbar-track {
   box-shadow: inset 0 0 5px rgb(0, 0, 0);
-  border-radius: 10px;
+  border-radius: 5px;
 }
 
 /* Handle */
